--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                     <span class="tag">Game Theory</span>
                 </div>
                 <div class="project-links">
-                    <a href="clue_tracker_v3.html" class="btn btn-primary">Launch Tracker</a>
+                    <a href="/clue-tracker/clue_tracker_v3.html" class="btn btn-primary">Launch Tracker</a>
                 </div>
             </div>
             
