--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                 <a href="https://github.com/vibingwithtyler" target="_blank">GitHub</a>
                 <!-- Add more social links as needed -->
                 <!-- <a href="https://twitter.com/yourhandle" target="_blank">Twitter</a> -->
-                <!-- <a href="https://linkedin.com/in/yourprofile" target="_blank">LinkedIn</a> -->
+                <!-- <a href="https://www.linkedin.com/in/tqwhite1/" target="_blank">LinkedIn</a> -->
             </div>
         </footer>
     </div>
