Uploading homepage with Wordlebot added

--- a/index.html
+++ b/index.html
@@ -256,15 +256,23 @@
                 </div>
             </div>
             
-            <!-- Placeholder for future projects -->
-            <div class="project-card coming-soon">
-                <div class="project-icon">💡</div>
-                <h2 class="project-title">My Next Project</h2>
+            <!-- WordleBot 2.0 -->
+            <div class="project-card">
+                <div class="project-icon">📝</div>
+                <h2 class="project-title">WordleBot 2.0</h2>
                 <p class="project-description">
-                    Space reserved for my next amazing creation. What will I build next?
+                    Advanced Wordle solver assistant with intelligent word filtering and scoring algorithms. 
+                    Analyzes letter constraints, positions, and frequency patterns to suggest optimal guesses 
+                    and maximize your chances of solving in fewer attempts.
                 </p>
                 <div class="project-tags">
-                    <span class="tag">TBD</span>
+                    <span class="tag">JavaScript</span>
+                    <span class="tag">Algorithm Design</span>
+                    <span class="tag">Word Analysis</span>
+                    <span class="tag">Game Solver</span>
+                </div>
+                <div class="project-links">
+                    <a href="https://vibingwithtyler.github.io/wordlebot/index.html" class="btn btn-primary">Launch WordleBot</a>
                 </div>
             </div>
             
