--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             <div class="project-card featured">
                 <span class="featured-badge">⭐ Featured</span>
                 <div class="project-icon">🎯</div>
-                <h2 class="project-title">Clue Tracker Suite</h2>
+                <h2 class="project-title">ClueBot 1.0</h2>
                 <p class="project-description">
                     A comprehensive deduction engine for the board game Clue. Features intelligent guess suggestions, 
                     bluff detection, opponent tracking, and a full clause-based logic system that guarantees optimal play.
