Updating with 3rd card

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             <div class="project-card featured">
                 <span class="featured-badge">⭐ Featured</span>
                 <div class="project-icon">🎯</div>
-                <h2 class="project-title">ClueBot 1.0</h2>
+                <h2 class="project-title">Clue Tracker Suite</h2>
                 <p class="project-description">
                     A comprehensive deduction engine for the board game Clue. Features intelligent guess suggestions, 
                     bluff detection, opponent tracking, and a full clause-based logic system that guarantees optimal play.
@@ -276,14 +276,23 @@
                 </div>
             </div>
             
-            <div class="project-card coming-soon">
-                <div class="project-icon">🚀</div>
-                <h2 class="project-title">Another Cool Thing</h2>
+            <!-- Connections Organizer -->
+            <div class="project-card">
+                <div class="project-icon">🔗</div>
+                <h2 class="project-title">Connections Organizer</h2>
                 <p class="project-description">
-                    More awesome projects coming soon. The possibilities are endless!
+                    Interactive puzzle solver for NYT Connections game. Features drag-and-drop word organization, 
+                    color-coded categories, and an intuitive workspace to help you visualize patterns and 
+                    group related words into themed categories.
                 </p>
                 <div class="project-tags">
-                    <span class="tag">TBD</span>
+                    <span class="tag">JavaScript</span>
+                    <span class="tag">Drag & Drop</span>
+                    <span class="tag">Puzzle Helper</span>
+                    <span class="tag">UI/UX</span>
+                </div>
+                <div class="project-links">
+                    <a href="https://vibingwithtyler.github.io/connections_organizer/connectionsorganizer.html" class="btn btn-primary">Launch Organizer</a>
                 </div>
             </div>
         </div>
